force-app/main/default/objects/Attendee__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Enter the email to use for communications sent to the Attendee related to the Event.</description>
    <inlineHelpText>Enter the email to use for communications sent to the Attendee related to the Event.</inlineHelpText>
    <label>Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>