force-app/main/default/objects/Attendee__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Defines the last name of the attendee</description>
    <inlineHelpText>Defines the last name of the attendee</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>