force-app/main/default/objects/Attendee__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <description>The date the Attendee registered for the Event.</description>
    <inlineHelpText>The date the Attendee registered for the Event.</inlineHelpText>
    <label>Registration Date</label>
    <type>Date</type>
</CustomField>